anypoint-connector-devkit/v/3.8/adding-datasense.adoc
= 添加DataSense
:keywords: devkit, datasense, connectors, metadata, annotations, pojo

Mule DataSense显示服务中实体的元数据。尽管此功能是可选的，但Mule强烈建议您在连接器中使用DataSense，以便使用户更容易实施它。

image:devkit-steps-operations.png[的devkit步骤的操作]

== 先决条件

本文档假定您熟悉 link:/anypoint-connector-devkit/v/3.8[Anypoint连接器DevKit]中提供的连接器体系结构，并且您从最终用户的角度熟悉 link:/anypoint-studio/v/5/datasense[DataSense]。

带有DataSense的== 连接器

集成开发人员通常会花费大量时间来简单地确定要传递给Web服务的数据的参数和类型，或者由Web服务返回。不得不使用每个API的文档来找出这些参数是一个低效率，易犯错，并且往往令人沮丧的体验。感谢DataSense，这些信息可以在设计时随时在Anypoint Studio中使用。

DataSense为Studio提供实体及其内部结构，然后将这些信息呈现给使用该连接器的用户。 DataSense还可与其他Anypoint Studio功能配合使用：

* 访问连接器的元数据，以便在上下文正确时，Studio智能地为连接器返回的字段中的期望值提供建议。
* 使用DataWeave自动推断映射内的输入或输出数据的能力（当与支持DataSense的连接器一起使用时）。

[NOTE]
*fundamental advantage of DataSense*能够通过连接器从应用程序公开的数据模型中提取元数据。详细了解 link:/anypoint-studio/v/5/datasense[DataSense]。

实施DataSense的两个关键步骤是：

.  *Configuring metadata retrieval*  - 从服务获取元数据并提供连接器的实现以提供此信息。
.  *Configuring metadata awareness*  - 定义如何对操作进行注释，以便Anypoint Studio了解DataSense实施并向连接器的最终用户提供有关它的信息。


== 静态数据模型

当连接器将其实体公开为*POJO*时，它被认为具有*static data model*（也称为"strongly typed"数据模型）。例如，如果您使用具有一组特定类的SDK，则会在编译时解析并知道这些类。

在这种情况下，元数据检索很简单：POJO实体类定义可以被引用，并且它们可以提供Java中所需的所有元数据，可以使用自省。处理器中的强类型参数已经意识到了这种意识。

[NOTE]
查看GitHub中的 link:https://github.com/mulesoft/twitter-connector/tree/develop[Twitter连接器]以查找示例。

=== 静态元数据检索

要检索静态元数据，请从连接器获取它。因为它不可能改变，所以你不需要打电话给Web服务来收集它。相反，您可以*hard-code the information into the connector*。

.  在连接器类中，添加一个用`@MetaDataKeyRetriever`注释的新方法：
+
[source, java, linenums]
----
@MetaDataKeyRetriever
    public List<MetaDataKey> getEntities() throws Exception {
        List<MetaDataKey> entities = new ArrayList<MetaDataKey>();
        entities.add(new DefaultMetaDataKey("Book_id","Book"));
        entities.add(new DefaultMetaDataKey("Author_id","Author"));
        entities.add(new DefaultMetaDataKey("BookList_id","BookList"));
        return entities;
    }
----
+
此方法返回实体名称的列表。在这种情况下，它使用三个键检索一个列表：Book，Author和BookList。
. 实现一个`@MetaDataRetriever`方法，该方法获取前一个`@MetaDataKeyRetriever`方法返回的每个实体的描述。
+
[NOTE]
`@MetaDataRetriever`注释的Java方法的返回类型__必须为`MetaData`，并且它必须包含一个`MetaDataKey`参数。
+
在这个例子中，假设服务的实体类在本地存在。然后可以在代码中直接引用`Book.class`和`Author.class`。您可以调用DevKit提供的接口`DefaultMetaDataBuilder`来轻松构建POJO。
+
[source,java, linenums]
----
@MetaDataRetriever
public MetaData describeEntity(MetaDataKey entityKey) throws Exception {
    //Here we describe the entity depending on the entity key
    if ("Author_id".equals(entityKey.getId())) {
        MetaDataModel authorModel =  new DefaultMetaDataBuilder().createPojo(Author.class).build();
        return new DefaultMetaData(authorModel);
    }
    if ("Book_id".equals(entityKey.getId())) {
        MetaDataModel bookModel =  new DefaultMetaDataBuilder().createPojo(Book.class).build();
        return new DefaultMetaData(bookModel);
    }
    if ("BookList_id".equals(entityKey.getId())) {
        MetaDataModel bookListModel =  new DefaultMetaDataBuilder().createList().ofPojo(Book.class).build();
        return new DefaultMetaData(bookListModel);
    }
    throw new RuntimeException(String.format("This entity %s is not supported",entityKey.getId()));
}
----
+
此方法自动描述Book，BookList和Author以及由它们公开的所有公共字段。

[NOTE]
====
使用*two different operations*非常适合从外部服务检索元数据。

在获得实体的同时使用两种不同的操作，另一种获得描述的原因是*describing all the entities through a single method can result in an excessive number of API calls*（您可能需要每个实体一次API调用）。
====

=== 静态元数据意识

到目前为止，我们已经实现了我们旨在连接的服务中的所有实体的描述机制。现在，让消息处理器可以访问这些信息。

该方法接收操作的类型作为用`@MetaDataKeyParam`注释的参数。该方法还会接收由`@MetaDataRetriever`在注释为`@Default("#[payload]")`的参数上返回的实体数据。

[NOTE]
此方法预期和生成的数据类型取决于您的元数据是_static_还是_dynamic_。如果您的元数据是_static_，那么实体数据是`Object`：

[source, java, linenums]
----
@Processor
public Object create(@MetaDataKeyParam(affects = MetaDataKeyParamAffectsType.BOTH) String entityType, @Default("#[payload]") Object entityData) {
    if (entityData instanceof Book) {
        return createBook((Book) entityData));
    }
    if (entityData instanceof Author) {
        return createAuthor((Author) entityData));
    }
    throw new RuntimeException("Entity not recognized");
}
private Object createAuthor(Author entityData) {
    //CODE FOR CREATING NEW AUTHOR GOES HERE
    return null;
}
private Object createBook(Book entityData) {
    //CODE FOR CREATING A NEW BOOK GOES HERE
    return null;
}
----

[source, java, linenums]
----
@Processor
public Object create(@MetaDataKeyParam String entityType, @Default("#[payload]") Object entityData) {
    }
----

输出元数据根据Studio中选择的实体类型而变化。当与DataMapper或DataWeave（变换消息组件）一起使用时，这是特别有用的。由于此方法，`@MetaDataRetriever`返回的所有实体均显示在Studio的下拉菜单中。

image:DSimage.png[DSimage]

此外，关于实体的元数据可以传递给其他Mule元素，如DataMapper或DataWeave（Transform Message组件）。

image:image2.png[图像2]

=== 使用静态元数据的示例

以下部分演示如何构建使用静态数据模型从Web服务中绘制数据的连接器。

[NOTE]
从 link:https://github.com/mulesoft-labs/example-connector/tree/master/static-metadata-example[GitHub上]下载此静态元数据连接器的完整示例。

在此示例中，连接器连接到库Web服务。 Web服务包含两种类型的元素：*book*和*author*。

*book*元素包含以下字段：

* 标题
* 概要
* 作者

*author*元素包含以下字段：

* 的firstName
*  lastName的

== 动态数据模型

当连接器具有动态数据模型（也称为"weakly typed"数据模型）时，特定类型的元数据不会立即可用。某个`MetaDataKey`代表在设计或运行时解析的元数据，而不像静态数据模型那样编译时间。要为具有动态数据模型的连接器支持DataSense功能，您必须实现其他功能，以根据应用程序提供的数据创建元数据。

=== 动态元数据检索

动态元数据检索要求您包含两个带注释的元数据相关方法，这些方法可为连接器引用的`@MetaDataCategory`中的动态模式生成DataSense元数据。

*  `@MetaDataKeyRetriever`从连接的服务中检索所有实体类型名称的列表。
+
[source, java, linenums]
----
@MetaDataKeyRetriever
public List<MetaDataKey> getMetadataKeys() {  }
----
+
*  `@MetaDataRetriever`使用元数据键列表（由`@MetaDataKeyRetriever`检索）来检索每个实体类型的实体组合。
+
[source, java, linenums]
----
@MetaDataRetriever
public MetaData getMetadata(MetaDataKey key) {  }
----

=== 动态元数据意识

这一步使捕获的元数据可以被消息处理器访问。实施时，Studio中连接器属性编辑器中的下拉菜单显示`@MetaDataKeyRetriever`返回的所有实体;其中每个都与`@MetaDataRetriever`返回的属性相结合。

image:DSimage.png[DSimage]

为此，消息处理器必须包含一个方法，该方法接收实体类型作为用`@MetaDataKeyParam`注释的参数。此方法还必须接收实体数据（由`@MetaDataRetriever`返回）上注释为`@Payload`或`@Default ("#[payload]")`的参数。

如果您的元数据是_dynamic_，则实体数据是`Map<String,Object>`：

[source, java, linenums]
----
public Map<String,Object> create(@MetaDataKeyParam String entityType, @Default("#[payload]") Map<String,Object> entityData) {
    }
----

如果您的元数据是*dynamic objects*的{​​{0}}，则实体数据是`List<Map<String,Object>>`：

[source, java, linenums]
----
public List<Map<String,Object>> getList(@MetaDataKeyParam String entityType, @Default("#[payload]") List<Map<String,Object>> entityData) {
    }
----

使用动态元数据的=== 示例

以下部分演示如何构建使用动态数据模型从Web服务中绘制数据的连接器。实现元数据的最实用方法总是动态地实现。这样做，如果连接的服务中的实体属性随时间而变化，则连接器可以毫不费力地适应这些更改。

[NOTE]
从 link:https://github.com/mulesoft-labs/example-connector/tree/master/dynamic-metadata-example[GitHub上]下载此动态元数据连接器的完整示例。

在此示例中，与<<Example Using Static Metadata,static model example>>中的一样，连接器连接的Web服务是书籍数据库。它包含两种类型的元素：书籍和作者，它们都包含与前面示例中相同的字段。

== 将DataSense支持添加到连接器的动态数据模型

要在连接器中实现DataSense，请先使用`@MetaDataScope`创建一个`@MetaDataCategory`并将其绑定到连接器。遵循这个遍历上面的动态数据模型部分的演练。

===  @ MetaDataCategory和@MetaDataScope

为了将DataSense解析器分组，DevKit提供了可应用于Java类的注释`@MetaDataCategory`。在此Java类中，将元数据检索机制（即用`@MetaDataKeyRetriever`和`@MetaDataRetriever`注释的方法）定义为`@MetaDataScope`。

例如，假设您希望为常规消息处理器提供额外的特殊消息处理器，该处理器可以访问名为"books"的作者实体上的秘密字段，以表示作者的书面书籍。您可以使用元数据类别将几个不同的消息处理器捆绑到一个连接器中，并在每个连接器中显示不同的实体组。

下面的示例显示了一个`@MetaDataCategory`类，它包含`@MetaDataKeyRetriever`和`@MetaDataRetriever`个方法，并驻留在单独的Java文件中。然后我们深入到注释的方法。您可以在此类和连接器模块之间建立链接。这样做的最常见方法是使用`@Inject`将连接器类注入`@MetaDataCategory`类，如下所示。

. 创建`@MetaDataCategory`类：
+
[source, java, linenums]
----
import org.mule.common.metadata.*;
import org.mule.common.metadata.builder.DefaultMetaDataBuilder;
import org.mule.common.metadata.builder.DynamicObjectBuilder;
import org.mule.common.metadata.datatype.DataType;

import org.mule.api.annotations.components.MetaDataCategory;
import org.mule.api.annotations.MetaDataKeyRetriever;
import org.mule.api.annotations.MetaDataRetriever;

@MetaDataCategory
public class DefaultCategory {

    @Inject
    private MyConnector myconnector;

    @MetaDataKeyRetriever
    public List<MetaDataKey> getEntities() throws Exception {
        //Here we generate the keys
    }

    @MetaDataRetriever
    public MetaData describeEntity(MetaDataKey entityKey) throws Exception {
        //Here we describe the entity depending on the entity key
    }
}
----
+
. 检查导入：
+
*  `org.mule.common.metadata.*`类包含用于表示和管理元数据的Mule类。
*  `org.mule.common.metadata.builder`类构造元数据表示（可能非常复杂的一组对象）。
*  `org.mule.common.metadata.datatype.DataType`类表示不同的对象字段数据类型及其属性。
+
. 使用`@MetaDataScope`将此类别绑定到`@Connector`或`@Processor`：
+
[source, java, linenums]
----
/**
 * DataSense-enabled Connector with multiple categories
 *
 * @author MuleSoft, inc.
 */
@MetaDataScope(DefaultCategory.class)
@Connector(name = "my-connector", minMuleVersion = "3.6")
public class MyConnector {
...

  @MetaDataScope(AdvancedCategory.class)
    @Processor
    public Map<String,Object> advancedOperation(@MetaDataKeyParam String entityType, @Default("#[payload]") Map<String,Object> entityData) {
       //Here you can use the books field in authors//
    }
}
----

=== 实现动态元数据检索

由于您无法直接访问具有类型结构的POJO，因此您必须从Web服务本身获取此结构。使用`Map<String,Object>`来表示动态实体。

[NOTE]
如果通过API调用动态获取元数据，则在`@MetaDataKeyRetriever`方法之前执行`@Connect`方法。这意味着最终用户必须先解决任何连接问题，然后才能访问元数据。

. 在连接器类中，添加一个用`@MetaDataKeyRetriever`注释的新方法。 （此方法与使用静态元数据实现的方法没有区别。）
+
[source, java, linenums]
----
@MetaDataKeyRetriever
    public List<MetaDataKey> getEntities() throws Exception {
        List<MetaDataKey> entities = new ArrayList<MetaDataKey>();
        entities.add(new DefaultMetaDataKey("Book_id","Book"));
        entities.add(new DefaultMetaDataKey("Author_id","Author"));
        entities.add(new DefaultMetaDataKey("BookList_id","BookList"));
        return entities;
    }
----
+
. 实施`@MetaDataRetriever`方法。这获得了前面方法返回的每个实体的描述。如前例所示，此方法使用接口`DefaultMetaDataBuilder`，但这次调用它来构建动态对象而不是POJO。
+
[source, java, linenums]
----
@MetaDataRetriever
public MetaData describeEntity(MetaDataKey entityKey) throws Exception {
    //Here we describe the entity depending on the entity key
    if ("Author_id".equals(entityKey.getId())) {
        MetaDataModel authorModel =  new DefaultMetaDataBuilder().createDynamicObject("Author")
                .addSimpleField("firstName", DataType.STRING)
                .addSimpleField("lastName", DataType.STRING)
                .build();
        return new DefaultMetaData(authorModel);
    }
    if ("Book_id".equals(entityKey.getId())) {
        MetaDataModel bookModel =  new   DefaultMetaDataBuilder().createDynamicObject("Book")
                .addSimpleField("title",DataType.STRING)
                .addSimpleField("synopsis",DataType.STRING)
                .addDynamicObjectField("author")
                .addSimpleField("firstName",DataType.STRING)
                .addSimpleField("lastName",DataType.STRING)
                .endDynamicObject()
                .build();
        return new DefaultMetaData(bookModel);
    }
    if ("BookList_id".equals(entityKey.getId())) {
        MetaDataModel bookListModel =  new DefaultMetaDataBuilder().createList().ofDynamicObject("book").build();
        return new DefaultMetaData(bookListModel);
    }
    throw new RuntimeException(String.format("This entity %s is not supported",entityKey.getId()));
}
----

=== 实现动态元数据感知

到目前为止，您已经实现了您要连接的服务中所有实体的描述机制。现在您必须使消息处理器可以访问这些信息。

消息处理器必须接收操作的类型作为用`@MetaDataKeyParam`注释的参数。 （Studio以`@MetaDataRetriever`返回的所有实体在下拉列表中显示操作。）消息处理器还必须以`Map<String,Object>`参数的形式接收实体数据（由`@MetaDataRetriever`返回），注释为`@Default("#[payload]")`。

[source, java, linenums]
----
@Processor
public Map<String,Object> create(@MetaDataKeyParam String entityType, @Default("#[payload]") Map<String,Object> entityData) {
    if ("Book_id".equals(entityType)) {
        return createBook(entityData);
    }
    if ("Author_id".equals(entityType)) {
        return createAuthor(entityData);
    }
    throw new RuntimeException("Entity not recognized");
}
private Map<String, Object> createAuthor(Map<String, Object> entityData) {
    //CODE TO CREATE BOOK GOES HERE
    return entityData;
}
private Map<String, Object> createBook(Map<String, Object> entityData) {
    //CODE TO CREATE AUTHOR GOES HERE
    return entityData;
}
----

在此方法中，Studio将`@MetaDataRetriever`返回的所有实体显示为下拉字段中的项目。

image:image3.png[图像3]

此外，关于实体的元数据可以传递给其他Mule元素，如DataMapper或DataWeave（Transform Message组件）。

image:image4.png[图像4]

////
== 缓存元数据
:keywords: metadata, cache, caching, datasense, key

此功能允许DevKit开发人员启用连接器以从缓存中检索元数据，从而缩短整体检索等待时间，从而增强连接器用户体验。

=== 必需的批注@MetaDataCategory和@MetaDataCache

为确保每次调用元数据方法时都会注入初始化缓存，DevKit开发人员必须将`@MetaDataCategory`放置在缓存管理/解析类上，并在此类中声明`@MetaDataCache`。在`@MetaDataCache`缓存被声明后，它被DevKit持久化。

[source, java, linenums]
----
@MetaDataCategory
public class CachedResolver {

    @MetaDataCache
    private MetaDataCache cache;

    public void setCache(MetaDataCache cache) {
        this.cache = cache;
    }

    //...
}
----

开发人员在获取元数据时应该在内部使用此缓存，并处理缓存和服务之间的某种程度的一致性。

[IMPORTANT]
只有当Mule应用程序的开发人员对连接器配置执行*Clear DataSense MetaData*时，才会提供所提供的缓存。清除DataSense后，会创建一个新的缓存。

image:clear-datasense-metadata.png[清除数据库元数据]

=== 示例实现

这是缓存填充和管理的一个示例实现，它带有`@MetaDataKeyRetriever`（带帮助方法`populateKeysCache`）和`@MetaDataRetriever`（它调用两个辅助方法`populateObjectsCache`和{{4} }）。有了这些缓存可以填充。

[source,java,linenums]
----
@MetaDataCategory
public class CachedResolver {

    @MetaDataCache
    private ConnectorMetaDataCache cache;

    // An initialized Cache will be injected by DevKit automatically using this setter
    public void setCache(ConnectorMetaDataCache cache) {
        this.cache = cache;
    }

    @MetaDataKeyRetriever
    public List<MetaDataKey> getMetaDataKeys() throws Exception {

        // Cache will be initialized by this point.
        // Usage will resemble that of a Map, storing and retrieving elements based on
        // Serializable keys
        if (!cache.get(STORED_KEYS_ID).isPresent()){
            // If MetaDataKeys were not fetched before and persisted with the cache,
            // then add all the keys to the cache
            populateKeysCache();
        }

        Optional<Map<String, String>> stored_keys = cache.get(STORED_KEYS_ID);

        // Based on the stored keys description, build the actual object
        List<MetaDataKey> keys = new ArrayList<MetaDataKey>();
        for (Map.Entry<String, String> entry : stored_keys.get().entrySet()) {
            keys.add(new DefaultMetaDataKey(entry.getKey(), entry.getValue()));
        }
        return keys;
    }

    @MetaDataRetriever
    public MetaData getMetaData(MetaDataKey key) throws Exception {
        // Cache will be initialized by this point.
        // If an object with this key was not stored previously in the cache
        // then we'll do a best-effort load all the metadata information to the cache
        // so it's present upon next invocation.
        if (!cache.get(key.getId()).isPresent()){
            populateObjectsCache();
        }

        Optional<Map<String, DataType>> dataFields = cache.get(key.getId());
        // Based on the stored metadata description, build the actual object
        return dataFields.isPresent() ? buildMetaData(dataFields.get(), key) : null;
    }


    private MetaData buildMetaData(Map<String, DataType> fields, MetaDataKey key) {
        DefaultMetaDataBuilder builder = new DefaultMetaDataBuilder();
        DynamicObjectBuilder<?> dynamicObject = builder.createDynamicObject(key.getId());

        for (Map.Entry<String, DataType> simpleField : fields.entrySet()) {
            dynamicObject.addSimpleField(simpleField.getKey(), simpleField.getValue());
        }

        return new DefaultMetaData(builder.build());
    }

    private void populateKeysCache() throws InterruptedException {
        Map<String, String> keyStore = new HashMap<String, String>();
        keyStore.put("ENTITY_TYPE_1", "Cached House Door");
        keyStore.put("ENTITY_TYPE_2", "Cached House Window");

        // All the keys are presisted in a Map under a general key in the cache
        // allowing for a bulk retrieval later.
        cache.put(STORED_KEYS_ID, (Serializable) keyStore);
    }

    private void populateObjectsCache() throws Exception {
        Map<String, DataType> door = new HashMap<String, DataType>();
        door.put("Color", DataType.STRING);
        door.put("Altura", DataType.INTEGER);

        Map<String, DataType> window = new HashMap<String, DataType>();
        window.put("Rejas", DataType.BOOLEAN);
        window.put("Marco", DataType.ENUM);

        cache.put("ENTITY_TYPE_1", (Serializable) door);
        cache.put("ENTITY_TYPE_2", (Serializable) window);
    }

}
----
////

== 另请参阅

*  link:/anypoint-connector-devkit/v/3.8/adding-query-pagination-support[添加查询分页支持]
*  link:/anypoint-connector-devkit/v/3.8/adding-datasense-query-language[添加DataSense查询语言]
